--- a/meet/index.html
+++ b/meet/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url="https://calendar.app.google/4ausvotPfxNX4hYb9">
+    <meta http-equiv="refresh" content="0; url=https://calendar.app.google/4ausvotPfxNX4hYb9">
     <title>Redirecting...</title>
 </head>
 <body>
